--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
-name: utils_package
-description: A new Flutter package project.
+name: simple_utils
+description: A package to simplify your coding
 version: 0.0.1
 homepage:
 
